--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
+    <!----------------------------------------Goes with  main.js example -->
+    <!-- <div class="container">
+      <span>Hello, World!</span>
+    </div>
+
+    <div id="purple">
+      <span>Purple Box</span>
+    </div> -->
+
+
+
+ <div class="container">
+  <div class="clock-container">
+    <time>12:00:00</time>
+  </div>
+ </div>
+
+
+
+
 
   <script src="./main.js"></script>
   </body>
