--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
  <div class="container">
   <div class="clock-container">
-    <time>12:00:00</time>
+    <time></time>
+    
   </div>
  </div>
 
