clock running again

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <!----------------------------------------Goes with  main.js example -->
+    <!---Goes with  main.js example -->
     <!-- <div class="container">
       <span>Hello, World!</span>
     </div>
