width of timer able to change with js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Color Clock</title>
 
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
   </head>
   <body>
     <!---Goes with  main.js example -->
@@ -22,6 +23,7 @@
   <div class="clock-container">
     <time></time>
   </div>
+  <div class="timerbar"></div>
  </div>
 
 
