timer bar is workinggit add css/styles.css index.html main.js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="clock-container">
     <time></time>
   </div>
-  <div class="timerbar"></div>
+  <span id="timerbar"></span>
  </div>
 
 
